adding start/end id filter for getExpData & fixing API docs
